--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,14 +1,14 @@
-$body: '#202020'; // black shade
-$text: '#fff';
-$bodyRgba: '32;32;32';
-$textRgba: '255;255;255';
-$grey: '#bebebe'; // grey shade
-$fontxs: '0.75em'; //1em = 16px
-$fontsm: '0.875em';
-$fontmd: '1em';
-$fontlg: '1.25em';
-$fontxl: '2em';
-$fontxxl: '3em';
-$fontxxxl: '5em';
-$fontBig: '10em';
-$navHeight: '5rem';
+$body: #202020; // black shade
+$text: #fff;
+$bodyRgba: rgba(32, 32, 32);
+$textRgba: rgba(255, 255, 255);
+$grey: #bebebe; // grey shade
+$fontxs: 0.75em; //1em = 16px
+$fontsm: 0.875em;
+$fontmd: 1em;
+$fontlg: 1.25em;
+$fontxl: 2em;
+$fontxxl: 3em;
+$fontxxxl: 5em;
+$fontBig: 10em;
+$navHeight: 5rem;
