--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -68,3 +68,37 @@
     object-position: center 50%;
   }
 }
+
+.LogoContainer {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  width: 100%;
+  color: $text;
+  z-index: 5;
+
+  a {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  svg {
+    width: 4rem;
+    height: auto;
+    overflow: visible;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+
+    g {
+      path {
+        stroke: $text;
+      }
+    }
+  }
+
+  .text {
+    font-size: $fontlg;
+    color: $text;
+    padding-bottom: 0.5rem;
+  }
+}
