--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -102,3 +102,77 @@
     padding-bottom: 0.5rem;
   }
 }
+
+.NavContainer {
+  width: 100vw;
+  z-index: 6;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+
+  @media (max-width: 40em) {
+    .Top0 {
+      top: 0;
+    }
+
+    .Top {
+      top: calc(-50vh - 4rem) !important;
+    }
+  }
+
+  .MenuItems {
+    position: relative;
+    height: $navHeight;
+    background-color: $body;
+    color: $text;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding: 0 10rem;
+
+    @media (max-width: 40em) {
+      flex-direction: column;
+      padding: 2rem 0;
+      height: 50vh;
+    }
+
+    .MenuBtn {
+      background-color: rgba($textRgba, 0.7);
+      list-style-type: style none;
+      color: $body;
+      width: 15rem;
+      height: 2.5rem;
+      clip-path: polygon(0 0, 100% 0, 80% 100%, 20% 100%);
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: $fontmd;
+      font-weight: 600;
+      text-transform: uppercase;
+      cursor: pointer;
+
+      @media (max-width: 40em) {
+        width: 10rem;
+        height: 2rem;
+      }
+    }
+
+    .MenuItem {
+      text-transform: uppercase;
+      color: $text;
+      cursor: pointer;
+      @media (max-width: 40em) {
+        flex-direction: column;
+        padding: 0.5rem 0;
+      }
+    }
+  }
+}
