has issue with gasp

--- a/src/styles/scss/_globals.scss
+++ b/src/styles/scss/_globals.scss
@@ -28,8 +28,8 @@ a {
   text-decoration: none;
 }
 
-section {
-  position: relative;
-  min-height: 100vh;
-  overflow: hidden;
-}
+// section {
+//   position: relative;
+//   min-height: 100vh;
+//   overflow: hidden;
+// }
